# recipes

./: .Rhistory  AriannaPrisciandaroDABD.R  BondData.csv  BondData.xlsx  BondDataCorretto.xlsx  README.md  arima.ipynb  chef.py  guacamole.md  tabbouleh.md
.cph/: .A_-_Edge_Checker.py_774b2e1527ccb94790089fa9c5c8d8bb.prob  .A_Anton_and_Danik.py_9ccf1f93fe76883cd3795d152f128ce5.prob  (+21 more)
polyagent/: .env.example  .gitignore  README.md  design_notes.md  pyproject.toml
polyagent/configs/: mvp.yaml  mvp_improved_from_report.yaml  mvp_reward_tuned.yaml
polyagent/docs/papers/: README.md
polyagent/src/polyagent/: __init__.py  cli.py  config.py
polyagent/src/polyagent/belief/: __init__.py  belief_state.py  likelihood_net.py  particle_filter.py
polyagent/src/polyagent/data/: __init__.py  loaders.py  make_demo_data.py  schemas.py
polyagent/src/polyagent/env/: __init__.py  fees.py  fills.py  replay_env.py
polyagent/src/polyagent/models/: __init__.py  encoders.py  policy_net.py  value_net.py
polyagent/src/polyagent/orchestration/: __init__.py  llm_agent.py  report_templates.py
polyagent/src/polyagent/rl/: buffers.py  ppo_kl.py  utils.py
polyagent/src/polyagent/search/: __init__.py  decision_time_search.py
polyagent/tests/: test_adv_filtering.py  test_config_overrides.py  test_decision_search.py  test_env_step.py  test_rewards.py
polymarket-wallet-alpha-watch/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
polymarket-wallet-alpha-watch/config/: topics.yaml
polymarket-wallet-alpha-watch/src/polyalpha/: __init__.py  cli.py  config.py
polymarket-wallet-alpha-watch/src/polyalpha/clients/: __init__.py  base.py  clob.py  data.py  gamma.py
polymarket-wallet-alpha-watch/src/polyalpha/llm/: __init__.py  openai_memo.py
polymarket-wallet-alpha-watch/src/polyalpha/pipelines/: __init__.py  collect_wallets.py  compute_pnl.py  discover_markets.py  export_xlsx.py
polymarket-wallet-alpha-watch/tests/: test_cli.py  test_compute_pnl.py  test_config.py
(+34 files in other folders)
